# Multiverse

./: .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  Tutorials.ipynb  build.sh  build_multiverse.bat  build_multiverse.sh  build_multiverse_ws.sh  build_multiverse_ws2.bat  build_multiverse_ws2.sh  build_third_parties.bat  build_third_parties.sh  build_ws.sh  install.bat  install.sh  my_connector.py  requirements.txt  setup.sh
MultiverseConnector/ros_connector/: pyproject.toml  requirements.txt
MultiverseConnector/ros_connector/src/: __main__.py
multiverse/: CMakeLists.txt  vcpkg.json
multiverse/modules/: CMakeLists.txt
multiverse/modules/multiverse_connectors/: CMakeLists.txt  multiverse_launch  multiverse_launch.py  pyproject.toml
multiverse/modules/multiverse_connectors/mujoco/: CMakeLists.txt
multiverse/modules/multiverse_connectors/scripts/: __init__.py  launch_multiverse_server.py  launch_pycram_interface.py  launch_ros.py  launch_ros2.py  launch_simulators.py  multiverse_initializing.py  multiverse_launch.py  multiverse_logging.py  multiverse_replay.py  multiverse_smoothing.py  multiverse_view.py  utils.py  view_multiverse.py
multiverse/modules/multiverse_connectors/src/: CMakeLists.txt
multiverse/modules/multiverse_connectors/tests/: test_multiverse_launch.py  test_utils.py
multiverse/modules/multiverse_knowledge/: CMakeLists.txt  README.md  install.sh
multiverse/modules/multiverse_knowledge/owl/: DUL.owl  SOMA-HOME.owl  USD.owl
multiverse/modules/multiverse_knowledge/scripts/: TBox_to_usd.py  auto_sem_tag.py  count_nodes_edges.py  multiverse_knowledge.py  quantify.py  sem_tagging.py  semantic_reporting.py  usd_to_ABox.py
multiverse/modules/multiverse_parser/: CMakeLists.txt  README.md  install.sh  mjmodel.xml  pyproject.toml
multiverse/modules/multiverse_parser/scripts/: multiverse_parser
multiverse/modules/multiverse_parser/tests/: test_create_scene.py  test_factory.py  test_mjcf_to_mjcf.py  test_mjcf_to_urdf.py  test_mjcf_to_usd.py  test_multiverse_parser.py  test_procthor.py  test_urdf_to_mjcf.py  test_urdf_to_urdf.py  test_urdf_to_usd.py  test_usd_to_mjcf.py  test_usd_to_urdf.py  test_usd_to_usd.py
multiverse/resources/demos/ur5e_ref_with_cubes/: gripper.py  rviz.rviz2
multiverse/resources/muv/: LiCAS_A1.muv  LiCAS_A1_in_playground.muv  LiCAS_A1_ros2_control.muv  apartment_full.muv  apartment_reduce_with_food_with_controllers.muv  apartment_reduce_with_food_with_hand.muv  apartment_with_shadow_hands.muv  arm_with_table.muv  camera.muv  crane.muv  crane_test.muv  crane_visual.muv  default.muv  empty.muv  empty_with_rviz.muv  hsrb_in_apartment.muv  humanoid.muv  iCub.muv  mix_demos.muv  panda_ref_with_task_board.muv  panda_with_task_board.muv  panda_with_task_board_and_hand.muv  panda_with_task_board_ros2_control.muv  pr2_in_apartment.muv  pr2_ros2_control.muv  preparing_soup.muv  rollin_justin.muv  shadow_hands.muv  shadow_hands_with_task_board.muv  table_with_bowling.muv  table_with_bowling_new.muv  tiago_dual_in_apartment.muv  tiago_dual_in_dlr_kitchen.muv  tiago_dual_in_isr_testbed.muv  tiago_dual_with_camera.muv  tiago_in_apartment.muv  ur5e_ref_with_cubes.muv  ur5e_ros2_control.muv  ur5e_with_cubes.muv  ur5e_with_task_board.muv
multiverse/resources/objects/chopstick/: chopstick.xml
multiverse/resources/objects/cold_cutting_1/: cold_cutting_1.xml
multiverse/resources/objects/cutting_board/: cutting_board.fbx  cutting_board.urdf  cutting_board.usda  cutting_board.xml
multiverse/resources/objects/garlic/: garlic.xml
multiverse/resources/objects/kiwi_1/: kiwi_1.xml
multiverse/resources/objects/lime/: lime.xml
multiverse/resources/objects/long_saussage/: long_saussage.fbx  long_saussage.urdf  long_saussage.usda  long_saussage.xml
multiverse/resources/objects/pan/: pan.xml
multiverse/resources/objects/yellow_pineapple/: yellow_pineapple.urdf  yellow_pineapple.usda  yellow_pineapple.xml
multiverse/resources/robots/arm/: arm.urdf  arm.usda  arm.xml
multiverse/resources/robots/humanoid/: humanoid.xml
multiverse/resources/robots/iCubV2_5/: iCub.urdf  iCub.xml
multiverse/resources/robots/pr2/: pr2.fbx  pr2.urdf  pr2.xml  pr2_with_pos_control.xml  pr2_with_vel_control.xml
multiverse/resources/robots/shadow_hand/: left_hand.xml  right_hand.xml
multiverse/resources/worlds/apartment_full/: Apartment.xml
multiverse/resources/worlds/apartment_full_dynamic/: Apartment.xml
multiverse/resources/worlds/demo/: cube.xml  table.xml  table_with_bowling.xml
multiverse/resources/worlds/dlr_kitchen/: dlr_kitchen.fbx  dlr_kitchen.urdf  dlr_kitchen.usda  dlr_kitchen.xml
multiverse/resources/worlds/isr_testbed/: CMakeLists.txt  isr_testbed.urdf  isr_testbed.usda  isr_testbed.xml  package.xml
multiverse/resources/worlds/table_with_bowling/: bowling.xml  bowling_no_cursor.xml  cube.xml  cube_no_cursor.xml  table.xml  table_with_bowling.xml  table_with_bowling_no_cursor.xml
multiverse/src/: CMakeLists.txt
multiverse/src/multiverse_client/: CMakeLists.txt
multiverse/src/multiverse_client/include/: multiverse_client.h  multiverse_client_json.h
multiverse/src/multiverse_client/src/: multiverse_client.cpp  multiverse_client_json.cpp  multiverse_client_pybind.cpp
multiverse/src/multiverse_server/: CMakeLists.txt  install-autostart.sh
multiverse/src/multiverse_server/include/: multiverse_server.h
multiverse/src/multiverse_server/src/: main  main.cpp  multiverse_server.cpp
multiverse_ws/src/multiverse_core/multiverse_client/: CMakeLists.txt  package.xml  setup.py
multiverse_ws/src/multiverse_core/multiverse_knowledge/: CMakeLists.txt  install.sh  package.xml
multiverse_ws/src/multiverse_core/multiverse_msgs/: CMakeLists.txt  package.xml
multiverse_ws/src/multiverse_core/multiverse_parser/: CMakeLists.txt  README.md  install.sh  package.xml  setup.py
multiverse_ws/src/multiverse_core/multiverse_server/: CMakeLists.txt  package.xml
multiverse_ws/src/multiverse_core/multiverse_socket/: CMakeLists.txt  package.xml  setup.py
multiverse_ws2/src/multiverse_control/: CMakeLists.txt  package.xml
(+14617 files in other folders)
