<?xml version="1.0"?>
<package format="2">
  <name>multiverse_msgs</name>
  <version>0.0.0</version>
  <description>The multiverse_msgs package</description>
  <maintainer email="hoanggia@uni-bremen.de">Giang Nguyen</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/Multiverse-Framework/Multiverse</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
</package>
